...

  const insets = useSafeAreaInsets()

  return (
    <View style={styles.container}>
      <View style={{ paddingTop: insets.top }}>
        <MigrationToolbar onBack={handleBack} testID="success-back" />
      </View>

      <Text fontType="brockmann-bold" style={styles.title}>
        You are aboard, Station OG!
      </Text>

      <Text fontType="brockmann-medium" style={styles.subtitle}>
        {
          'Your vault is secured. No single key.\nNo single point of failure.'
        }
...
